objects/ssot__Assessment__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AssessmentContextId__c</fullName>
        <label>Assessment Context</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssessmentContextObjectName__c</fullName>
        <label>Assessment Context Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssessmentDefinitionId__c</fullName>
        <label>Assessment Definition</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssessmentStatus__c</fullName>
        <label>Assessment Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssessmentTaskName__c</fullName>
        <label>Assessment Task Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AssessmentType__c</fullName>
        <label>Assessment Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Assessment_SubjectId_map_Account_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assessment_SubjectId_map_Account_Id_N_1</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>Assessment_SubjectId_map_Account_Id_N_1</relationshipLabel>
        <relationshipName>Assessment_SubjectId_map_Account_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveDateTime__c</fullName>
        <label>Effective Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ExpirationDateTime__c</fullName>
        <label>Expiration Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Assessment Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentAssessmentId__c</fullName>
        <label>Parent Assessment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SubjectId__c</fullName>
        <label>Subject</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SubjectObjectName__c</fullName>
        <label>Subject Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291273324_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assessment_SubjectId_map_AccountCont_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>Assessment_SubjectId_map_AccountCont_rel</relationshipLabel>
        <relationshipName>rel_1720291273324_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291274049_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assessment_AssessmentContextId_map_A_rel</label>
        <referenceTo>ssot__Application__dlm</referenceTo>
        <relationshipLabel>Assessment_AssessmentContextId_map_A_rel</relationshipLabel>
        <relationshipName>rel_1720291274049_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291280302_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assessment_ParentAssessmentId_map_As_rel</label>
        <referenceTo>ssot__Assessment__dlm</referenceTo>
        <relationshipLabel>Assessment_ParentAssessmentId_map_As_rel</relationshipLabel>
        <relationshipName>rel_1720291280302_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>